--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "caravelas",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "author": "Pirates Vix Technologies",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
